feat(sign-in,a11y): setup sign-in component, work around a11y

--- a/apps/frontend/src/style/abstracts/_variables.scss
+++ b/apps/frontend/src/style/abstracts/_variables.scss
@@ -27,6 +27,7 @@
   --spacing-100: 0.5rem;
   --spacing-125: 0.625rem;
   --spacing-150: 0.75rem;
+  --spacing-175: 1rem;
   --spacing-200: 1.125rem;
   --spacing-250: 1.25rem;
   --spacing-300: 1.5rem;
