--- a/apps/frontend/src/style/main.scss
+++ b/apps/frontend/src/style/main.scss
@@ -1,2 +1,6 @@
 @use './abstracts/variables' as *;
 @use './base/base' as *;
+@use './components/atoms/logo';
+@use './components/atoms/button';
+@use './components/atoms/link';
+@use './components/molecules/form' as *;
