--- a/apps/frontend/src/style/base/_base.scss
+++ b/apps/frontend/src/style/base/_base.scss
@@ -10,4 +10,13 @@ body {
   font-family: var(--font-primary);
   line-height: 1;
   font-weight: 400;
+  min-height: 100vh;
+  background-color: var(--color-neutral-100);
+}
+
+.container {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
