--- a/apps/frontend/src/style/main.scss
+++ b/apps/frontend/src/style/main.scss
@@ -1,4 +1,5 @@
 @use './abstracts/variables' as *;
+@use './abstracts/mixins' as *;
 @use './base/base' as *;
 @use './components/atoms/logo';
 @use './components/atoms/button';
