--- a/apps/frontend/src/style/abstracts/_variables.scss
+++ b/apps/frontend/src/style/abstracts/_variables.scss
@@ -60,6 +60,7 @@
   --color-teal-800: #013c3b;
   --color-teal-700: #014745;
   --color-red-800: #cb0a04;
+  --color-red-700: #e02614;
   --color-red-600: #fd4740;
 }
 
