--- a/apps/frontend/src/style/components/atoms/_button.scss
+++ b/apps/frontend/src/style/components/atoms/_button.scss
@@ -6,6 +6,11 @@
   font-family: inherit;
 
   &--primary {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: var(--spacing-100);
+
     padding: var(--spacing-150) var(--spacing-175);
     border-radius: 8px;
     background-color: var(--color-teal-700);
@@ -30,4 +35,37 @@
       background-color: var(--color-teal-800);
     }
   }
+
+  &--error {
+    background-color: var(--color-red-700);
+    &:hover {
+      background-color: var(--color-red-800);
+    }
+    &:focus {
+      box-shadow:
+        0 0 0 2px var(--color-neutral-0),
+        0 0 0 4px var(--color-red-700);
+    }
+  }
+
+  &--success {
+    background-color: var(--color-teal-700);
+    &:hover {
+      background-color: var(--color-teal-800);
+    }
+    &:focus {
+      outline: none;
+      box-shadow:
+        0 0 0 2px var(--color-neutral-0),
+        0 0 0 4px var(--color-teal-700);
+    }
+  }
+}
+
+.icon-check::before {
+  content: '✔';
+}
+
+.icon-error::before {
+  content: '✖';
 }
