--- a/apps/frontend/src/style/components/molecules/_form.scss
+++ b/apps/frontend/src/style/components/molecules/_form.scss
@@ -70,6 +70,25 @@
     text-align: center;
   }
 
+  &__input-wrapper {
+    position: relative;
+  }
+
+  &__icon {
+    height: var(--spacing-250);
+    width: var(--spacing-250);
+  }
+
+  &__password-toggle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    right: var(--spacing-100);
+    transform: translateY(-50%);
+  }
+
   &__group {
     position: relative;
     display: flex;
@@ -107,6 +126,7 @@
     font-family: inherit;
     padding: var(--spacing-150);
     border-radius: 8px;
+    width: 100%;
     border: 1px solid var(--color-neutral-500);
 
     background-color: var(--color-neutral-0);
