--- a/apps/frontend/src/style/components/molecules/_form.scss
+++ b/apps/frontend/src/style/components/molecules/_form.scss
@@ -9,7 +9,6 @@
 
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-400);
 
   border-radius: 12px;
 
@@ -25,6 +24,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--spacing-075);
+    margin: var(--spacing-400) 0;
   }
 
   &__title {
@@ -65,6 +65,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-175);
+  margin-bottom: var(--spacing-400);
 
   &__required {
     position: relative;
@@ -97,6 +98,9 @@
 
   &__container-error {
     text-align: center;
+    &:has(.form__error.visible) {
+      margin-bottom: var(--spacing-400);
+    }
   }
 
   &__input-wrapper {
